--- a/GP App/Base.lproj/Main.storyboard
+++ b/GP App/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tJ8-7V-zJd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Jee-Lp-hWC">
     <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -391,7 +391,6 @@
         <!--Navigation Controller-->
         <scene sceneID="IPn-Cb-zJi">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NfW-QW-3Do" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController id="Jee-Lp-hWC" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="ZR2-T7-hnn">
                         <rect key="frame" x="0.0" y="59" width="430" height="96"/>
@@ -408,16 +407,36 @@
                             <color key="shadowColor" name="Orange"/>
                         </navigationBarAppearance>
                     </navigationBar>
+                    <connections>
+                        <segue destination="9KV-3J-Vjy" kind="relationship" relationship="rootViewController" id="GF6-Q5-AVx"/>
+                    </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NfW-QW-3Do" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2106" y="-2803"/>
         </scene>
         <!--Welcome-->
+        <scene sceneID="22d-P8-GjM">
+            <objects>
+                <viewController id="9KV-3J-Vjy" customClass="Home" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="f6w-Kr-Bv4">
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="95f-Np-esi"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Welcome" id="1GI-us-wUQ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dp0-PL-xjD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3017" y="-2803"/>
+        </scene>
+        <!--Welcome-->
         <scene sceneID="Uzw-Sl-sqV">
             <objects>
-                <tabBarController title="Welcome" automaticallyAdjustsScrollViewInsets="NO" modalTransitionStyle="flipHorizontal" id="tJ8-7V-zJd" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="PortfolioTabBarController" title="Welcome" automaticallyAdjustsScrollViewInsets="NO" modalTransitionStyle="flipHorizontal" id="tJ8-7V-zJd" customClass="PortfolioTabBarController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Welcome" largeTitleDisplayMode="always" style="browser" customizationIdentifier="1" id="bV8-ns-cZ9"/>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" style="browser" customizationIdentifier="1" id="bV8-ns-cZ9"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zgu-pc-rCX">
@@ -435,8 +454,6 @@
                         <segue destination="hak-9L-djh" kind="relationship" relationship="viewControllers" id="LlA-DE-7Ug"/>
                         <segue destination="UFq-Ue-0rL" kind="relationship" relationship="viewControllers" id="Qrp-LF-Sky"/>
                         <segue destination="8ha-t0-htA" kind="relationship" relationship="viewControllers" id="lAO-Or-3A8"/>
-                        <segue destination="JqO-3I-bZK" kind="relationship" relationship="viewControllers" id="VDb-62-0r1"/>
-                        <segue destination="Y6K-3x-bm7" kind="relationship" relationship="viewControllers" id="Pfz-iT-au9"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fPR-g2-vOd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -446,7 +463,7 @@
         <!--Featured-->
         <scene sceneID="zsq-24-lUd">
             <objects>
-                <collectionViewController id="sBL-cH-eRE" customClass="FeaturedViewController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="FeaturedViewController" id="sBL-cH-eRE" customClass="FeaturedViewController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="W4a-Oi-bGh">
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -574,7 +591,7 @@
         <!--New-->
         <scene sceneID="Fys-S5-m76">
             <objects>
-                <collectionViewController id="49g-Cq-p4P" customClass="NewViewController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="NewViewController" id="49g-Cq-p4P" customClass="NewViewController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="iZq-nd-dfc">
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -672,7 +689,7 @@
         <!--Landscape-->
         <scene sceneID="1fK-Xn-WNV">
             <objects>
-                <collectionViewController id="hak-9L-djh" customClass="LandscapeViewController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="LandscapeViewController" id="hak-9L-djh" customClass="LandscapeViewController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="1rt-Si-4KH">
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -739,7 +756,7 @@
         <!--Portrait-->
         <scene sceneID="JsD-4F-PTx">
             <objects>
-                <collectionViewController id="UFq-Ue-0rL" customClass="PortraitViewController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="PortraitViewController" id="UFq-Ue-0rL" customClass="PortraitViewController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="ohh-Xk-Rc0">
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -806,7 +823,7 @@
         <!--The Vault Entry-->
         <scene sceneID="eKE-cE-mQe">
             <objects>
-                <tableViewController id="8ha-t0-htA" userLabel="The Vault Entry" customClass="VaultTableViewController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="TheVaultEntryViewController" id="8ha-t0-htA" userLabel="The Vault Entry" customClass="VaultTableViewController" customModule="GP_App" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="59G-tE-oQw">
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
